Fixed line spacing on footer font to 2 from 1

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -234,7 +234,7 @@ html body {
 
     .footer-font {
       font-size: 1.25792rem;
-      line-height: 1.25792rem;
+      line-height: 2.25792rem;
     }
 
     .link-font {
